@@ -80,8 +80,8 @@ typedef struct pkgconf_queue_ pkgconf_queue_t;
 #define PKGCONF_FOREACH_LIST_ENTRY_REVERSE(tail, value) \
 	for ((value) = (tail); (value) != NULL; (value) = (value)->prev)
 
-#define LIBPKGCONF_VERSION	20001
-#define LIBPKGCONF_VERSION_STR	"2.0.1"
+#define LIBPKGCONF_VERSION	20002
+#define LIBPKGCONF_VERSION_STR	"2.0.2"
 
 struct pkgconf_queue_ {
 	pkgconf_node_t iter;
